@@ -1,3 +1,4 @@
+E: generic-dh-make-2005: changelog-is-dh_make-template
 E: generic-dh-make-2005: description-is-dh_make-template
 E: generic-dh-make-2005: helper-templates-in-copyright
 E: generic-dh-make-2005: section-is-dh_make-template
