@@ -1,3 +1,4 @@
+E: generic-dh-make-2008: changelog-is-dh_make-template
 E: generic-dh-make-2008: copyright-contains-dh_make-todo-boilerplate
 E: generic-dh-make-2008: description-is-dh_make-template
 E: generic-dh-make-2008: helper-templates-in-copyright
